# myTui

./: CMakeLists.txt
.cache/clangd/index/: cell.hpp.A1BFE080B7BBEEEA.idx  colors.cpp.0437CDBF65D20C67.idx  colors.cpp.23F38B19920B96E1.idx  colors.hpp.CCCEB9581C083BDF.idx  component.cpp.5F42030D90DF10FD.idx  component.cpp.CB6F953C259AB638.idx  component.hpp.9B99C370B17E4AC7.idx  main.cpp.1F25F86F00B0C15E.idx  screen.cpp.333377B8A3922820.idx  screen.cpp.71BA8DE689AF0D5C.idx  screen.hpp.2587B87E0579E1E0.idx  tui.cpp.0A8DAB17773E7CCA.idx  tui.hpp.802FD5F2F05B1D93.idx
include/: cell.hpp  colors.hpp  component.hpp  screen.hpp  tui.hpp
include/src/: colors.cpp  component.cpp  screen.cpp
src/: main.cpp
src/include/: colors.cpp  component.cpp  screen.cpp
